[package]
name = "Hconfig"
version = "1.0.0"
authors = ["Hyultis <hyultis@use.startmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
dashmap = "6.0.1"
arc-swap = "1.7.1"
thiserror = "1.0.63"
