[package]
name = "Hconfig"
version = "2.0.0"
authors = ["Hyultis <hyultis@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hyultis/rust_Hconfig"
keywords = ["json", "config", "path-config", "settings"]
categories = ["config"]
description = "Json configuration file manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyjson = "2.5"
dashmap = "7.0.0-rc2"
arc-swap = "1.7"
thiserror = "2.0"
